# Bouncing-Ball-Task

./: .autoenv.template  .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
notebooks/: 0.0-Notebook-Template.ipynb  1.0-Overall-Task-Statistics.ipynb  1.1-Nonwall-Bounces.ipynb  1.1-Nowall-Bounces.ipynb  2.0-Generating-Human-Datasets.ipynb  2.1-Generating-Dataset-3312658842.ipynb  2.2-Generating-Dataset-3144523574.ipynb  2.3-Generating-Dataset-2359798956.ipynb  3.0-Generating-V2-Datasets.ipynb  3.1-Generating-V2-Dataset-250324-115252-1185959417.ipynb  3.2-Generating-V2-1-Datasets.ipynb  4.0-Generating-V3-Datasets.ipynb  4.1-Generating-V3-1-Datasets.ipynb  4.2-Generating-V320-Dataset.ipynb  4.3-Generating-V321-Dataset.ipynb  4.3-Generating-V321-Dataset.py  4.4-Generating-V322-Dataset.ipynb  4.5-Generating-V323-Dataset.ipynb  5.0-Matching-Task-Stats.ipynb
src/bouncing_ball_task/: bouncing_ball.py  constants.py  defaults.py  human_bouncing_ball.py  index.py
src/bouncing_ball_task/human_bouncing_ball/: __init__.py  bounce.py  catch.py  dataset.py  defaults.py  human_bouncing_ball.py  nonwall.py  straight.py
src/bouncing_ball_task/model_bouncing_ball/: cc_nvc.py  cc_rvc.py  cc_vc.py  dataset.py  defaults.py  ncc_nvc.py  ncc_rvc.py  ncc_vc.py
src/bouncing_ball_task/utils/: gif.py  htaskutils.py  logutils.py  pyutils.py  taskutils.py  types.py  visualize.py
tests/: test_bouncing_ball.py  test_utils_pyutils.py
